fix modal on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -70,3 +70,27 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
+.modal {
+    position: absolute;
+    width: 600px;
+    top: 30%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    marginRight: -50%;
+    transform: translate(-50%, -50%);
+
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px;
+
+}
+
+@media only screen and (max-width: 666px) {
+    .modal {
+        width: 100%;
+    }
+}
